docker/k8s/neight-postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: neight-tech-wdd-dashboard-postgres
  namespace: neight
spec:
  replicas: 1
  serviceName: neight-tech-wdd-dashboard-postgres
  selector:
    matchLabels:
      app: neight-tech-wdd-dashboard-postgres
  template:
    metadata:
      labels:
        app: neight-tech-wdd-dashboard-postgres
    spec:
      containers:
        - name: neight-tech-wdd-dashboard-postgres
          image: bitnami/postgresql:11.7.0
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-persistent-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-persistent-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: neight-tech-wdd-dashboard-postgres
  namespace: neight
spec:
  selector:
    app: neight-tech-wdd-dashboard-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
