docker/k8s/neight-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: neight-tech-wdd-dashboard-backend
  namespace: neight
spec:
  type: LoadBalancer
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-backend
  name: neight-tech-wdd-dashboard-backend
  namespace: neight
spec:
  selector:
    matchLabels:
      neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-backend
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-backend
    spec:
      containers:
      - image: docker.io/nsuneightdocker/neight-tech-wdd-dashboard-backend:20230908-1911
        imagePullPolicy: IfNotPresent
        name: neight-tech-wdd-dashboard-backend
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 250m
            memory: 64Mi
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neight-tech-wdd-dashboard-backend-ingress
  namespace: neight
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - neight-app.com
  rules:
  - host: neight-app.com
    http:
      paths:
      - path: /neight-api/
        pathType: ImplementationSpecific
        backend:
          service:
            name: neight-tech-wdd-dashboard-backend
            port:
              number: 8000
