docker/k8s/neight-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: neight-tech-wdd-dashboard-frontend
  namespace: neight
spec:
  type: LoadBalancer
  ports:
  - name: "80"
    port: 80
    targetPort: 8000
  selector:
    neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-frontend
  name: neight-tech-wdd-dashboard-frontend
  namespace: neight
spec:
  selector:
    matchLabels:
      neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-frontend
  replicas: 1
  strategy: {}
  template:
    metadata:
      labels:
        neight-tech-wdd-dashboard.service: neight-tech-wdd-dashboard-frontend
    spec:
      containers:
      - image: docker.io/nsuneightdocker/neight-tech-wdd-dashboard-frontend:20230908-1911
        imagePullPolicy: IfNotPresent
        name: neight-tech-wdd-dashboard-frontend
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: 32Mi
            cpu: 50m
          limits:
            memory: 64Mi
            cpu: 250m
      restartPolicy: Always
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neight-tech-wdd-dashboard-frontend-ingress
  namespace: neight
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - neight-app.com
  rules:
  - host: neight-app.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: neight-tech-wdd-dashboard-frontend
            port:
              number: 80
